// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisitorDetailsComponent should match snapshot 1`] = `
<div
  id="root1"
>
  <div
    class="w-12 text-lg flex justify-center"
  >
    <i
      class="p-2 rounded-full material-icons border-2 border-dotted border-gray-600"
    >
      face
    </i>
    
    
    
    
    
  </div>
  <div
    class="p-2 flex-1"
    flex=""
  >
    
  </div>
  <div
    class="w-48 py-2 flex items-center justify-end"
  >
    <action-icon
      aria-describedby="cdk-describedby-message-8"
      cdk-describedby-host=""
      class="mat-tooltip-trigger invisible"
      remote=""
    />
    
    <action-icon
      aria-describedby="cdk-describedby-message-5"
      cdk-describedby-host=""
      checkin=""
      class="mat-tooltip-trigger invisible"
      content="event_available"
      mattooltip="Checkin Guest"
    />
    
    <action-icon
      aria-describedby="cdk-describedby-message-6"
      cdk-describedby-host=""
      checkout=""
      class="mat-tooltip-trigger invisible"
      content="event_busy"
      mattooltip="Checkout Guest"
    />
    
    <a
      aria-describedby="cdk-describedby-message-9"
      cdk-describedby-host=""
      class="mat-tooltip-trigger"
      href="mailto:null"
      mat-icon-button=""
    >
      <app-icon>
        email
      </app-icon>
    </a>
    
    <action-icon
      aria-describedby="cdk-describedby-message-7"
      cdk-describedby-host=""
      class="mat-tooltip-trigger invisible"
      content="event_busy"
      mattooltip="Print QR Code"
    />
    
  </div>
  <div
    class="w-14 p-2"
  />
  
</div>
`;

exports[`VisitorDetailsComponent should match snapshot 2`] = `
<div
  id="root1"
>
  <div
    class="w-12 text-lg flex justify-center"
  >
    <i
      class="p-2 rounded-full material-icons border-2 border-dotted border-gray-600"
    >
      face
    </i>
    
    
    
    
    
  </div>
  <div
    class="p-2 flex-1"
    flex=""
  >
    
  </div>
  <div
    class="w-48 py-2 flex items-center justify-end"
  >
    <action-icon
      aria-describedby="cdk-describedby-message-8"
      cdk-describedby-host=""
      class="mat-tooltip-trigger"
      remote=""
    />
    
    <action-icon
      aria-describedby="cdk-describedby-message-5"
      cdk-describedby-host=""
      checkin=""
      class="mat-tooltip-trigger"
      content="event_available"
      mattooltip="Checkin Guest"
    />
    
    <action-icon
      aria-describedby="cdk-describedby-message-6"
      cdk-describedby-host=""
      checkout=""
      class="mat-tooltip-trigger"
      content="event_busy"
      mattooltip="Checkout Guest"
    />
    
    <a
      aria-describedby="cdk-describedby-message-9"
      cdk-describedby-host=""
      class="mat-tooltip-trigger"
      href="mailto:"
      mat-icon-button=""
    >
      <app-icon>
        email
      </app-icon>
    </a>
    
    <action-icon
      aria-describedby="cdk-describedby-message-7"
      cdk-describedby-host=""
      class="mat-tooltip-trigger invisible"
      content="event_busy"
      mattooltip="Print QR Code"
    />
    
  </div>
  <div
    class="w-14 p-2"
  />
  
</div>
`;
